Archive2/d2/fa89a73a8ba009/output
main.cpp:5:23: error: 'WEAPONTYPE' has not been declared
     void weaponSelect(WEAPONTYPE choice);
                       ^
main.cpp:13:6: error: prototype for 'void Weapon::weaponSelect(Weapon::WEAPONTYPE)' does not match any in class 'Weapon'
 void Weapon::weaponSelect(Weapon::WEAPONTYPE enumChoice) {}
      ^
main.cpp:5:10: error: candidate is: void Weapon::weaponSelect(int)
     void weaponSelect(WEAPONTYPE choice);
          ^
main.cpp:7:10: error: 'enum Weapon::WEAPONTYPE' is protected
     enum WEAPONTYPE {
          ^
main.cpp:13:35: error: within this context
 void Weapon::weaponSelect(Weapon::WEAPONTYPE enumChoice) {}
                                   ^
